# BigInt

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  qbigint.cpp
.github/workflows/: build-actions.yml  build-test-install.yml  codeFormat.yml
include/: arith_uint256.h  qbigint.hpp
include/esterv/crypto/: bigint.hpp
src/: arith_uint256.cpp  bigint.cpp
tests/: CMakeLists.txt  test1.cpp
